@@ -645,6 +645,10 @@ otherwise
 (the (values) 'a) A
 (multiple-value-list (the (values &rest symbol) (values 'a 'b))) (A B)
 
+(handler-case (the fixnum 'a)
+  (type-error (c) (cons (type-error-expected-type c) (type-error-datum c))))
+(FIXNUM A)
+
 (type-of (make-array '(10 3) :element-type nil))
 (SIMPLE-ARRAY NIL (10 3))
 (type-of (make-array 10 :element-type nil))
